--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,6 @@
-[package]
-name = "rust_raytracer"
-version = "0.1.0"
-authors = ["David Smoker <dsmoker@gmail.com>"]
-edition = "2018"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-glam = { version = "0.12.0", features = ["serde"] }
-itertools = "0.10.0"
-rayon = "1.5.0"
-serde = "1.0.123"
-serde_derive = "1.0.123"
-serde_json = "1.0.61"
+members = [
+    "cmdline",
+    "engine",
+]
