--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 glam = { version = "0.12.0", features = ["serde"] }
 itertools = "0.10.0"
+rand = "0.8.3"
 rayon = "1.5.0"
 serde = "1.0.123"
 serde_derive = "1.0.123"
